manifest/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 80
        volumeMounts:
        #- name: web-persistent-storage
         # mountPath: /var/lib/data
        - name: config
          mountPath: "/etc/nginx/conf.d"
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: nginx-configmap
          items:
          - key: db_host
            path: default.conf
      #- name: web-persistent-storage
       # persistentVolumeClaim:
        #  claimName: mypvc
