manifest/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: sre.local
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
  - host: web.local
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: web
            port: 
              number: 80
